[package]
name = "TimedCommitment"
version = "0.1.0"
authors = ["hlc <1281970998@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv = { git = "https://github.com/qhyw99/curv"}
bulletproof = { git = "https://github.com/qhyw99/bulletproofs"}

